Fix zooming on inputs on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -87,7 +87,6 @@ html {
 
   font-family: Iran !important;
   label, input {
-    font-size: 0.9rem !important;
     direction: rtl;
   }
 
